# fractal_explorer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  fractal-explorer-43602a03b160f373.js  fractal-explorer-43602a03b160f373_bg.wasm  fractal-explorer-48761005e8b45544_bg.wasm  fractal-explorer-51a2b4f3f24b1ae3_bg.wasm  fractal-explorer-5a47183af74289a8.js  fractal-explorer-5a47183af74289a8_bg.wasm  fractal-explorer-6e0dcae476d07d55.js  fractal-explorer-6e0dcae476d07d55_bg.wasm  fractal-explorer-7de367cd9183d67d.js  fractal-explorer-7de367cd9183d67d_bg.wasm  fractal-explorer-aa2402b026f197be_bg.wasm  fractal-explorer-c6cc8adeb5d16292.js  fractal-explorer-c6cc8adeb5d16292_bg.wasm  fractal-explorer-c728e7301a0c7626.js  fractal-explorer-c728e7301a0c7626_bg.wasm  fractal-explorer-c9bef58bc8c68b81.js  fractal-explorer-c9bef58bc8c68b81_bg.wasm  fractal-explorer-d9c808fadd514c7b.js  fractal-explorer-d9c808fadd514c7b_bg.wasm  fractal-explorer-e974cf68adc25dfc_bg.wasm  index.html
src/: camera.rs  export.rs  main.rs
src/coloring/: mod.rs  palette.rs  presets.rs
src/fractals/: buddhabrot.rs  burning_ship.rs  julia.rs  mandelbrot.rs  mod.rs  nova.rs  tricorn.rs
src/renderer/: compute.rs  gpu.rs  mod.rs  render.rs  uniforms.rs
src/shaders/: buddhabrot.wgsl  buddhabrot_tonemap.wgsl  burning_ship.wgsl  burning_ship_f64.wgsl  common.wgsl  fullscreen.wgsl  julia.wgsl  julia_f64.wgsl  mandelbrot.wgsl  mandelbrot_f64.wgsl  nova.wgsl  nova_f64.wgsl  tricorn.wgsl  tricorn_f64.wgsl
src/ui/: control_panel.rs  mod.rs  palette_editor.rs
