[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "22"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
log = "0.4"
env_logger = "0.11"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
