[package]
name = "fractal-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
wgpu = "22"
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.29"
log = "0.4"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = { version = "0.29", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
] }
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
